--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "berya",
   "license": "ISC",
@@ -14,6 +12,7 @@
     "angular": "^1.6.9",
     "angular-cookies": "^1.6.9",
     "angular-translate": "^2.17.0",
+    "angular-ui-bootstrap": "^2.5.6",
     "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
