--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "dev": "NODE_ENV=development webpack-dev-server --progress",
+    "build": "NODE_ENV=production webpack -p --colors"
+  },
   "keywords": [],
   "author": "berya",
   "license": "ISC",
@@ -17,10 +20,13 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "express": "^4.16.2",
+    "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
     "json-server": "^0.12.1",
     "lodash": "^4.17.5",
     "restangular": "^1.6.1",
-    "webpack": "^3.11.0"
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0"
   }
 }
