--- a/package.json
+++ b/package.json
@@ -11,20 +11,40 @@
   "author": "berya",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
     "@uirouter/angularjs": "^1.0.15",
     "angular": "^1.6.9",
     "angular-cookies": "^1.6.9",
     "angular-translate": "^2.17.0",
     "angular-ui-bootstrap": "^2.5.6",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-angular": "^6.0.15",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-runtime": "^6.26.0",
+    "clean-webpack-plugin": "^0.1.18",
+    "css-loader": "^0.28.10",
     "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.10",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
     "json-server": "^0.12.1",
     "lodash": "^4.17.5",
+    "ngtemplate-loader": "^2.0.1",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.1",
     "restangular": "^1.6.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.0.0"
