--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@uirouter/angularjs": "^1.0.15",
     "angular": "^1.6.9",
     "angular-cookies": "^1.6.9",
+    "angular-template-url-loader": "^1.0.2",
     "angular-translate": "^2.17.0",
     "angular-ui-bootstrap": "^2.5.6",
+    "angular1-templateurl-loader": "^1.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
@@ -41,6 +43,7 @@
     "ngtemplate-loader": "^2.0.1",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.1",
+    "raw-loader": "^0.5.1",
     "restangular": "^1.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
