--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jquery": "^3.3.1",
     "json-server": "^0.12.1",
     "lodash": "^4.17.5",
+    "ng-annotate-loader": "^0.6.1",
     "ngtemplate-loader": "^2.0.1",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.1",
