--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
+    "url-loader": "^1.0.1",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.0.0"
