--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "bootstrap": "^4.1.0",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "express": "^4.16.2",
