--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "berya",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@uirouter/angularjs": "^1.0.15",
     "angular": "^1.6.9",
     "angular-cookies": "^1.6.9",
@@ -20,15 +20,11 @@
     "angular-translate": "^2.17.0",
     "angular-ui-bootstrap": "^2.5.6",
     "angular1-templateurl-loader": "^1.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^8.0.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-angular": "^6.0.15",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2017": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "bootstrap": "^4.1.0",
     "clean-webpack-plugin": "^0.1.18",
@@ -51,8 +47,8 @@
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "url-loader": "^1.0.1",
-    "webpack": "^3.11.0",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.0.0"
+    "webpack": "^4.17.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
